create navbar.html file

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,6 @@
-{%extends 'bootstrap/base.html'%}
 
-<h2 class="text-center">{{title}}</h2>
+
+
+
+<h2 class="text-center">{{name}}</h2>
+<h2 class="text-center">{{subject}}</h2>
