--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,1 +1,7 @@
-{%extends 'bootstrap/base.html'%}
+
+
+{%extends 'base.html'%}
+
+{%block content%}
+<h2 class="text-center">We sincerely regret, the site is down or we can not make your query...</h2>
+{%endblock%}
