--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,23 @@
 {% extends 'bootstrap/base.html'%}
-{%block navbar%}
-{%endblock%}
-{%block content%}
-{%endblock%}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        {% if title %}
+        <title> {{ title }}</title>
+        {% else %}
+        <title> Fruit Vendor </title>
+        {% endif %}
+    </head>
+    <body>
+        <!-- Navbar block  --> 
+        {% block navbar %}
+        {% include 'navbar.html' %}
+        {% endblock %}
+        <!-- Content block -->
+
+        {% block content %}
+
+        {% endblock%}
+    </body>
+</html>
