--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -2,6 +2,6 @@
 
 {%extends 'base.html'%}
 
-{%block content%}
-<h2 class="text-center">We sincerely regret, the site is down or we can not make your query...</h2>
-{%endblock%}
+{% block content %}
+<h2 class="text-center">We sincerely regret, the site is down or your query is invalid...</h2>
+{% endblock %}
