--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,9 @@
+{%extends 'base.html'%}
 
 
+{%block content%}
+<h2 class="text-center">Wow</h2>
+
+{%endblock%}
 
 
-<h2 class="text-center">{{name}}</h2>
-<h2 class="text-center">{{subject}}</h2>
