--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -382,3 +385,5 @@
 
 </body>
 </html>
+
+{% endblock %}
