--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,3 +1,12 @@
+
+
+
+
+
+
+
+{% extends 'base.html'%}
+{% content block %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -305,3 +314,4 @@
 	
 </body>
 </html>
+{% endblock%}
