--- a/app/templates/index_2.html
+++ b/app/templates/index_2.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -589,3 +591,4 @@
 
 </body>
 </html>
+{% endblock %}
