add content blocks and extend base in news.html

--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% block content%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -366,13 +368,14 @@
 	<!-- owl carousel -->
 	<script src="assets/js/owl.carousel.min.js"></script>
 	<!-- magnific popup -->
-	<script src="assets/js/jquery.magnific-popup.min.js"></script>
+	<script src="static/assets/js/jquery.magnific-popup.min.js"></script>
 	<!-- mean menu -->
-	<script src="assets/js/jquery.meanmenu.min.js"></script>
+	<script src="static/assets/js/jquery.meanmenu.min.js"></script>
 	<!-- sticker js -->
-	<script src="assets/js/sticker.js"></script>
+	<script src="static/assets/js/sticker.js"></script>
 	<!-- main js -->
-	<script src="assets/js/main.js"></script>
+	<script src="staticassets/js/main.js"></script>
 
 </body>
 </html>
+{% endblock %}
