extend base and create content blocks in single_news.html

--- a/app/templates/single-news.html
+++ b/app/templates/single-news.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% content block %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -371,3 +374,4 @@
 
 </body>
 </html>
+{% endblock %}
