link pictures in single-news.html

--- a/app/templates/single-news.html
+++ b/app/templates/single-news.html
@@ -54,7 +54,7 @@
 						<!-- logo -->
 						<div class="site-logo">
 							<a href="index.html">
-								<img src="assets/img/logo.png" alt="">
+								<img src="static/assets/img/logo.png" alt="">
 							</a>
 						</div>
 						<!-- logo -->
@@ -171,7 +171,7 @@
 							<div class="comment-list">
 								<div class="single-comment-body">
 									<div class="comment-user-avater">
-										<img src="assets/img/avaters/avatar1.png" alt="">
+										<img src="static/assets/img/avaters/avatar1.png" alt="">
 									</div>
 									<div class="comment-text-body">
 										<h4>Jenny Joe <span class="comment-date">Aprl 26, 2020</span> <a href="#">reply</a></h4>
@@ -179,7 +179,7 @@
 									</div>
 									<div class="single-comment-body child">
 										<div class="comment-user-avater">
-											<img src="assets/img/avaters/avatar3.png" alt="">
+											<img src="static/assets/img/avaters/avatar3.png" alt="">
 										</div>
 										<div class="comment-text-body">
 											<h4>Simon Soe <span class="comment-date">Aprl 27, 2020</span> <a href="#">reply</a></h4>
@@ -189,7 +189,7 @@
 								</div>
 								<div class="single-comment-body">
 									<div class="comment-user-avater">
-										<img src="assets/img/avaters/avatar2.png" alt="">
+										<img src="static/assets/img/avaters/avatar2.png" alt="">
 									</div>
 									<div class="comment-text-body">
 										<h4>Addy Aoe <span class="comment-date">May 12, 2020</span> <a href="#">reply</a></h4>
