--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -16,6 +16,7 @@
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="news.html">News</a></li>
                 <li><a href="shop.html">Shop</a></li>
+                <button class="btn btn-outline-primary"><li><a href="{{url_for('auth.register')}}">Sign Up</a></li></button>
             </ul>
         </li>
         <li><a href="news.html">News</a>
