--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,37 +1,55 @@
+<div class="loader">
+    <div class="loader-inner">
+        <div class="circle"></div>
+    </div>
+</div>
+<!--PreLoader Ends-->
+<div class="top-header-area" id="sticker">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 col-sm-12 text-center">
+                <div class="main-menu-wrap">
+                    <!-- logo -->
+                    <div class="site-logo">
+                        <a href="index.html">
+                            <img src="static/assets/img/logo.png" alt="">
+                        </a>
+                    </div>
+                    <!-- logo -->
 <nav class="main-menu">
     <ul>
-        <li class="current-list-item"><a href="#">Home</a>
+        <li><a href="{{url_for('main.index')}}">Home</a></li>
             <ul class="sub-menu">
                 <li><a href="index.html">Static Home</a></li>
                 <li><a href="index_2.html">Slider Home</a></li>
             </ul>
         </li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="{{url_for('main.about')}}">About</a></li>
         <li><a href="#">Pages</a>
             <ul class="sub-menu">
                 <li><a href="404.html">404 page</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="cart.html">Cart</a></li>
-                <li><a href="checkout.html">Check Out</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="news.html">News</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <button class="btn btn-outline-primary"><li><a href="{{url_for('auth.register')}}">Sign Up</a></li></button>
+                <li><a href="{{url_for('main.about')}}">About</a></li>
+                <li><a href="{{url_for('main.cart')}}">Cart</a></li>
+                <li><a href="{{url_for('main.checkout')}}">Check Out</a></li>
+                <li><a href="{{url_for('main.contact')}}">Contact</a></li>
+                <li><a href="{{url_for('main.news')}}">News</a></li>
+                <li><a href="{{url_for('main.shop')}}">Shop</a></li>
+                <button class="btn btn-outline-primary"><li><a href="">Sign Up</a></li></button>
             </ul>
         </li>
-        <li><a href="news.html">News</a>
+        <li><a href="{{url_for('main.news')}}">News</a></li>
             <ul class="sub-menu">
                 <li><a href="news.html">News</a></li>
                 <li><a href="single-news.html">Single News</a></li>
             </ul>
         </li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="shop.html">Shop</a>
+        <li><a href="{{url_for('main.contact')}}">Contact</a></li>
+        <li><a href="{{url_for('main.shop')}}">Shop</a></li>
             <ul class="sub-menu">
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="checkout.html">Check Out</a></li>
                 <li><a href="single-product.html">Single Product</a></li>
-                <li><a href="cart.html">Cart</a></li>
+                <li><a href="{{url_for('main.cart')}}">Cart</a></li>
             </ul>
         </li>
         <li>
@@ -42,3 +60,12 @@
         </li>
     </ul>
 </nav>
+<a class="mobile-show search-bar-icon" href="#"><i class="fas fa-search"></i></a>
+<div class="mobile-menu"></div>
+<!-- menu end -->
+</div>
+</div>
+</div>
+</div>
+</div>
+<!-- end header -->
