--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -11,8 +11,8 @@
                 <div class="main-menu-wrap">
                     <!-- logo -->
                     <div class="site-logo">
-                        <a href="index.html">
-                            <img src="static/assets/img/logo.png" alt="">
+                        <a href="{{url_for('main.index')}}">
+                            <img src="static/assets/img/logo.png" alt="Fruits">
                         </a>
                     </div>
                     <!-- logo -->
@@ -20,14 +20,14 @@
     <ul>
         <li><a href="{{url_for('main.index')}}">Home</a></li>
             <ul class="sub-menu">
-                <li><a href="index.html">Static Home</a></li>
-                <li><a href="index_2.html">Slider Home</a></li>
+                <li><a href="{{url_for('main.index')}}">Static Home</a></li>
+                <li><a href="{{url_for('main.indexx')}}">Slider Home</a></li>
             </ul>
         </li>
         <li><a href="{{url_for('main.about')}}">About</a></li>
         <li><a href="#">Pages</a>
             <ul class="sub-menu">
-                <li><a href="404.html">404 page</a></li>
+                <li><a href="{{url_for('main.product')}}">product</a></li>
                 <li><a href="{{url_for('main.about')}}">About</a></li>
                 <li><a href="{{url_for('main.cart')}}">Cart</a></li>
                 <li><a href="{{url_for('main.checkout')}}">Check Out</a></li>
@@ -39,22 +39,22 @@
         </li>
         <li><a href="{{url_for('main.news')}}">News</a></li>
             <ul class="sub-menu">
-                <li><a href="news.html">News</a></li>
-                <li><a href="single-news.html">Single News</a></li>
+                <li><a href="{{url_for('main.news')}}">News</a></li>
+                <li><a href="{{url_for('main.single')}}">Single News</a></li>
             </ul>
         </li>
         <li><a href="{{url_for('main.contact')}}">Contact</a></li>
         <li><a href="{{url_for('main.shop')}}">Shop</a></li>
             <ul class="sub-menu">
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="checkout.html">Check Out</a></li>
-                <li><a href="single-product.html">Single Product</a></li>
+                <li><a href="{{url_for('main.shop')}}">Shop</a></li>
+                <li><a href="{{url_for('main.checkout')}}">Check Out</a></li>
+                <li><a href="{{url_for('main.product')}}">Single Product</a></li>
                 <li><a href="{{url_for('main.cart')}}">Cart</a></li>
             </ul>
         </li>
         <li>
             <div class="header-icons">
-                <a class="shopping-cart" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+                <a class="shopping-cart" href="{{url_for('main.cart')}}"><i class="fas fa-shopping-cart"></i></a>
                 <a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
             </div>
         </li>
