--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -31,7 +31,7 @@
 	<!-- mean menu css -->
 	<link rel="stylesheet" href="static/assets/css/meanmenu.min.css">
 	<!-- main style -->
-	<link rel="stylesheet" href="staticassets/css/main.css">
+	<link rel="stylesheet" href="static/assets/css/main.css">
 	<!-- responsive -->
 	<link rel="stylesheet" href="static/assets/css/responsive.css">
 
