change styling in single-news

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -234,7 +234,7 @@
 						<h2 class="widget-title">Get in Touch</h2>
 						<ul>
 							<li>34/8, Nairobi, Kenya.</li>
-							<li>support@fruitkha.com</li>
+							<li>timohmugendi@gmail.com</li>
 							<li>+254 791 417 147</li>
 						</ul>
 					</div>
